--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 asgiref==3.8.1
 Django==5.0.6
+django-cors-headers==4.3.1
+django-vite==3.0.4
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
 sqlparse==0.5.0
+whitenoise==6.6.0
