--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
 asgiref==3.8.1
+astroid==3.2.0
+autopep8==2.1.0
+dill==0.3.8
 Django==5.0.6
 django-cors-headers==4.3.1
 django-vite==3.0.4
+isort==5.13.2
+mccabe==0.7.0
+platformdirs==4.2.1
 psycopg2-binary==2.9.9
+pycodestyle==2.11.1
+pylint==3.2.0
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
 python-dotenv==1.0.1
 sqlparse==0.5.0
+tomlkit==0.12.5
 whitenoise==6.6.0
