--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,45 @@
+annotated-types==0.6.0
 asgiref==3.8.1
 astroid==3.2.0
 autopep8==2.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+click-option-group==0.5.6
 dill==0.3.8
 Django==5.0.6
 django-cors-headers==4.3.1
 django-vite==3.0.4
+dotty-dict==1.3.1
+gitdb==4.0.11
+GitPython==3.1.43
+idna==3.7
+importlib_resources==6.4.0
 isort==5.13.2
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 mccabe==0.7.0
+mdurl==0.1.2
 platformdirs==4.2.1
 psycopg2-binary==2.9.9
 pycodestyle==2.11.1
+pydantic==2.7.1
+pydantic_core==2.18.2
+Pygments==2.18.0
 pylint==3.2.0
 pylint-django==2.5.5
 pylint-plugin-utils==0.8.2
 python-dotenv==1.0.1
+python-gitlab==4.5.0
+python-semantic-release==9.7.3
+requests==2.31.0
+requests-toolbelt==1.0.0
+rich==13.7.1
+shellingham==1.5.4
+smmap==5.0.1
 sqlparse==0.5.0
 tomlkit==0.12.5
+typing_extensions==4.11.0
+urllib3==2.2.1
 whitenoise==6.6.0
